✨ Add delete player from event by owner

--- a/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
@@ -64,6 +64,7 @@
       </div>
     </div>
 
-    <app-events-players-list [players]="players"></app-events-players-list>
+    <app-events-players-list [players]="players" [isUserLoggedInOwner]="isUserLoggedInOwner" (deletePlayerEvent)="onDeletePlayer($event)">
+    </app-events-players-list>
   </ng-container>
 </div>
