✨ Add event chat

--- a/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
@@ -66,5 +66,7 @@
 
     <app-events-players-list [players]="players" [isUserLoggedInOwner]="isUserLoggedInOwner" (deletePlayerEvent)="onDeletePlayer($event)">
     </app-events-players-list>
+
+    <app-events-chats-list [eventId]="eventId"> </app-events-chats-list>
   </ng-container>
 </div>
