✨ Add delete event by owner

--- a/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
@@ -29,11 +29,16 @@
             <fa-icon icon="pen-to-square" class="me-1"></fa-icon>
             Éditer
           </a>
+          <!-- Button : DELETE -->
+          <button class="btn btn-danger text-white ms-3" (click)="onDeleteEventModal()">
+            <fa-icon icon="calendar-xmark" class="me-1"></fa-icon>
+            Supprimer
+          </button>
           <!-- Button : INVITE FRIENDS -->
-          <a class="btn btn-success text-white ms-3" (click)="onInviteFriendsModal()">
+          <button class="btn btn-success text-white ms-3" (click)="onInviteFriendsModal()">
             <fa-icon icon="user-plus" class="me-1"></fa-icon>
             Inviter des amis
-          </a>
+          </button>
         </div>
 
         <!-- Button : SUBSCRIBE -->
