🎨 Update event edit
- Add button cancel.

--- a/src/main/webapp/app/gamer-squad/events/components/events-edit/events-edit.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/events-edit/events-edit.component.html
@@ -72,5 +72,6 @@
     <hr />
 
     <button class="btn btn-primary" type="submit" [disabled]="eventForm.invalid">Mettre à jour</button>
+    <button class="btn btn-danger" type="button" (click)="cancel()">Annuler</button>
   </form>
 </div>
