--- a/src/main/webapp/app/gamer-squad/events/components/my-events-owned-list-item/my-events-owned-list-item.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/my-events-owned-list-item/my-events-owned-list-item.component.html
@@ -1,9 +1,21 @@
 <div class="card mt-3">
   <div class="card-header">
-    <span class="text-muted">
-      {{ event.meetingDate | gsDatetime }}
-      <small class="align-text-top"> ({{ event.meetingDate | gsDatetimeFromNow }}) </small>
-    </span>
+    <div class="row">
+      <div class="text-muted col">
+        <div class="row align-items-center">
+          <div class="col-12 col-sm-auto">
+            {{ event.meetingDate | gsDatetime }}
+          </div>
+          <small class="align-text-top col-12 col-sm ps-sm-0"> ({{ event.meetingDate | gsDatetimeFromNow }}) </small>
+        </div>
+      </div>
+      <div *ngIf="event.private" class="col-auto align-self-center" data-gs-tooltip="Évènement privé">
+        <fa-icon icon="lock" class="text-danger"></fa-icon>
+      </div>
+      <div *ngIf="!event.private" class="col-auto align-self-center" data-gs-tooltip="Évènement public">
+        <fa-icon icon="lock-open" class="text-success"></fa-icon>
+      </div>
+    </div>
   </div>
 
   <div class="card-body">
@@ -11,21 +23,7 @@
     <p class="card-text">{{ event.description }}</p>
   </div>
 
-  <div class="card-footer">
-    <div class="row justify-content-between align-items-center m-0">
-      <div *ngIf="!event.ownerImgUrl" class="avatar-cropper col-auto">
-        <img src="/content/images/default/avatar.png" class="avatar-image" alt="Avatar" />
-      </div>
-
-      <div *ngIf="event.ownerImgUrl" class="avatar-cropper col-auto">
-        <img [src]="event.ownerImgUrl" class="avatar-image" alt="Avatar" />
-      </div>
-
-      <div class="col">{{ event.ownerLogin | titlecase }}</div>
-
-      <a [routerLink]="['/events', event.id]" class="btn btn-primary text-white col-auto">
-        <fa-icon class="me-2" icon="eye"></fa-icon>Voir
-      </a>
-    </div>
+  <div class="card-footer text-center">
+    <a [routerLink]="['/events', event.id]" class="btn btn-primary text-white"> <fa-icon class="me-2" icon="eye"></fa-icon>Voir </a>
   </div>
 </div>
