--- a/src/main/webapp/app/gamer-squad/events/components/my-events-owned-list/my-events-owned-list.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/my-events-owned-list/my-events-owned-list.component.html
@@ -1,7 +1,21 @@
 <div class="container">
   <h2>À venir</h2>
+
   <app-my-events-owned-list-item *ngFor="let event of afterNowEvents" [event]="event"> </app-my-events-owned-list-item>
 
+  <div *ngIf="!afterNowEvents || afterNowEvents.length === 0" class="d-flex justify-content-center my-3">
+    <div class="alert alert-warning m-0">
+      <span>Aucun évènement à venir</span>
+    </div>
+  </div>
+
   <h2>Passés</h2>
+
   <app-my-events-owned-list-item *ngFor="let event of beforeNowEvents" [event]="event"> </app-my-events-owned-list-item>
+
+  <div *ngIf="!beforeNowEvents || beforeNowEvents.length === 0" class="d-flex justify-content-center my-3">
+    <div class="alert alert-warning m-0">
+      <span>Aucun évènement passé</span>
+    </div>
+  </div>
 </div>
