--- a/src/main/webapp/app/gamer-squad/events/components/my-events-pending-list-item/my-events-pending-list-item.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/my-events-pending-list-item/my-events-pending-list-item.component.html
@@ -1,9 +1,21 @@
 <div class="card mt-3">
   <div class="card-header">
-    <span class="text-muted">
-      {{ event.meetingDate | gsDatetime }}
-      <small class="align-text-top"> ({{ event.meetingDate | gsDatetimeFromNow }}) </small>
-    </span>
+    <div class="row">
+      <div class="text-muted col">
+        <div class="row align-items-center">
+          <div class="col-12 col-sm-auto">
+            {{ event.meetingDate | gsDatetime }}
+          </div>
+          <small class="align-text-top col-12 col-sm ps-sm-0"> ({{ event.meetingDate | gsDatetimeFromNow }}) </small>
+        </div>
+      </div>
+      <div *ngIf="event.private" class="col-auto align-self-center" data-gs-tooltip="Évènement privé">
+        <fa-icon icon="lock" class="text-danger"></fa-icon>
+      </div>
+      <div *ngIf="!event.private" class="col-auto align-self-center" data-gs-tooltip="Évènement public">
+        <fa-icon icon="lock-open" class="text-success"></fa-icon>
+      </div>
+    </div>
   </div>
 
   <div class="card-body">
@@ -22,8 +34,6 @@
       </div>
 
       <div class="col">{{ event.ownerLogin | titlecase }}</div>
-
-      <div *ngIf="event.private" class="col-auto"><fa-icon icon="lock" class="me-2"></fa-icon>Privé</div>
 
       <a *ngIf="!event.private" [routerLink]="['/events', event.id]" class="btn btn-primary text-white col-auto">
         <fa-icon class="me-2" icon="eye"></fa-icon>Voir
