--- a/src/main/webapp/app/gamer-squad/events/components/my-events-subscribed-list/my-events-subscribed-list.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/my-events-subscribed-list/my-events-subscribed-list.component.html
@@ -1,5 +1,21 @@
-<h2>À venir</h2>
-<app-my-events-subscribed-list-item *ngFor="let event of afterNowEvents" [event]="event"> </app-my-events-subscribed-list-item>
+<div class="container">
+  <h2>À venir</h2>
 
-<h2>Passés</h2>
-<app-my-events-subscribed-list-item *ngFor="let event of beforeNowEvents" [event]="event"> </app-my-events-subscribed-list-item>
+  <app-my-events-subscribed-list-item *ngFor="let event of afterNowEvents" [event]="event"> </app-my-events-subscribed-list-item>
+
+  <div *ngIf="!afterNowEvents || afterNowEvents.length === 0" class="d-flex justify-content-center my-3">
+    <div class="alert alert-warning m-0">
+      <span>Aucun évènement à venir</span>
+    </div>
+  </div>
+
+  <h2>Passés</h2>
+
+  <app-my-events-subscribed-list-item *ngFor="let event of beforeNowEvents" [event]="event"> </app-my-events-subscribed-list-item>
+
+  <div *ngIf="!beforeNowEvents || beforeNowEvents.length === 0" class="d-flex justify-content-center my-3">
+    <div class="alert alert-warning m-0">
+      <span>Aucun évènement passé</span>
+    </div>
+  </div>
+</div>
