--- a/src/main/webapp/app/gamer-squad/events/components/events-players-list-item/events-players-list-item.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/events-players-list-item/events-players-list-item.component.html
@@ -1,5 +1,5 @@
-<div class="card mt-3">
-  <div class="card-body row justify-content-between align-items-center">
+<div class="card mt-2">
+  <div class="card-body row justify-content-between align-items-center p-0 m-1">
     <div *ngIf="!player.userImageUrl" class="avatar-cropper col-auto">
       <img src="/content/images/default/avatar.png" class="avatar-image" alt="Avatar" />
     </div>
