--- a/src/main/webapp/app/gamer-squad/events/components/events-chats-list/events-chats-list.component.scss
+++ b/src/main/webapp/app/gamer-squad/events/components/events-chats-list/events-chats-list.component.scss
@@ -2,64 +2,13 @@
 @import 'node_modules/bootstrap/scss/mixins';
 @import 'node_modules/bootstrap/scss/variables';
 
-h1 {
-  text-align: center;
-  font-size: 28px;
-}
-
 .events-chats-container {
-  margin: auto;
-  width: 800px;
 }
 
 .messages-container {
-  height: calc(100vh - 436px);
+  max-height: 650px;
   overflow: auto;
 }
 
 .card-form {
-}
-
-@include media-breakpoint-down(lg) {
-  h1 {
-    font-size: 26px;
-  }
-
-  .events-chats-container {
-    width: 60%;
-  }
-
-  .messages-container {
-    height: calc(100vh - 405px);
-  }
-}
-
-@include media-breakpoint-down(md) {
-  h1 {
-    margin-top: 0.5rem;
-    font-size: 22px;
-  }
-
-  .events-chats-container {
-    width: 80%;
-  }
-
-  .messages-container {
-    height: calc(100vh - 400px);
-  }
-}
-
-@include media-breakpoint-down(sm) {
-  h1 {
-    margin-top: 0.5rem;
-    font-size: 20px;
-  }
-
-  .events-chats-container {
-    width: 100%;
-  }
-
-  .messages-container {
-    height: calc(100vh - 390px);
-  }
 }
