--- a/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/events-detail/events-detail.component.html
@@ -2,12 +2,24 @@
   <jhi-alert-error></jhi-alert-error>
   <jhi-alert></jhi-alert>
 
-  <h1>Détail de l'évènement</h1>
-  <hr />
+  <h1 class="display-5 text-center">Détail de l'évènement</h1>
+  <hr class="mb-0" />
 
   <ng-container *ngIf="event">
     <div class="row">
-      <div class="col-9">
+      <!-- Game card -->
+      <div class="col-12 col-lg-4 mt-3">
+        <div class="card">
+          <img class="card-img-top" *ngIf="event.gameImgUrl as imgUrl" [src]="imgUrl" [alt]="event.gameTitle" />
+
+          <div class="card-body text-center">
+            <h2 class="card-title game-title mb-0">{{ event.gameTitle }}</h2>
+          </div>
+        </div>
+      </div>
+
+      <!-- Event card -->
+      <div class="col-12 col-lg-8 mt-3">
         <div class="card">
           <div class="card-header">
             <div class="row">
@@ -32,49 +44,76 @@
             <h2 class="card-title">{{ event.title }}</h2>
             <p class="card-text">{{ event.description }}</p>
           </div>
-        </div>
 
-        <!-- Buttons display for owner -->
-        <div class="mt-3 text-center" *ngIf="event.ownerLogin === userLogin">
-          <!-- Button : EDIT -->
-          <a class="btn btn-primary text-white" [routerLink]="['/events', event.id, 'edit']">
-            <fa-icon icon="pen-to-square" class="me-1"></fa-icon>
-            Éditer
-          </a>
-          <!-- Button : DELETE -->
-          <button class="btn btn-danger text-white ms-3" (click)="onDeleteEventModal()">
-            <fa-icon icon="calendar-xmark" class="me-1"></fa-icon>
-            Supprimer
-          </button>
-          <!-- Button : INVITE FRIENDS -->
-          <button class="btn btn-success text-white ms-3" (click)="onInviteFriendsModal()">
-            <fa-icon icon="user-plus" class="me-1"></fa-icon>
-            Inviter des amis
-          </button>
-        </div>
+          <div class="card-footer">
+            <div class="row justify-content-between align-items-center m-0">
+              <div *ngIf="!event.ownerImgUrl" class="avatar-cropper col-auto">
+                <img src="/content/images/default/avatar.png" class="avatar-image" alt="Avatar" />
+              </div>
 
-        <!-- Buttons display for subscribers -->
-        <div *ngIf="userLogin !== event.ownerLogin">
-          <!-- Button : SUBSCRIBE -->
-          <div class="mt-3 text-center" *ngIf="!isAlreadySub">
-            <a class="btn btn-success text-white" (click)="onSubscribe()">
-              <fa-icon icon="calendar-plus" class="me-1"></fa-icon>
-              S'inscrire
-            </a>
+              <div *ngIf="event.ownerImgUrl" class="avatar-cropper col-auto">
+                <img [src]="event.ownerImgUrl" class="avatar-image" alt="Avatar" />
+              </div>
+
+              <div class="col">{{ event.ownerLogin | titlecase }}</div>
+
+              <!-- Buttons display for owner -->
+              <div class="col-auto px-0" *ngIf="event.ownerLogin === userLogin">
+                <!-- Button : EDIT -->
+                <a class="btn btn-primary text-white" [routerLink]="['/events', event.id, 'edit']">
+                  <fa-icon icon="pen-to-square" class="me-1"></fa-icon>
+                  Éditer
+                </a>
+                <!-- Button : DELETE -->
+                <button class="btn btn-danger text-white ms-3" (click)="onDeleteEventModal()">
+                  <fa-icon icon="calendar-xmark" class="me-1"></fa-icon>
+                  Supprimer
+                </button>
+              </div>
+
+              <!-- Buttons display for subscribers -->
+              <div class="col-auto px-0" *ngIf="userLogin !== event.ownerLogin">
+                <!-- Button : SUBSCRIBE -->
+                <div *ngIf="!isAlreadySub">
+                  <a class="btn btn-success text-white" (click)="onSubscribe()">
+                    <fa-icon icon="calendar-plus" class="me-1"></fa-icon>
+                    S'inscrire
+                  </a>
+                </div>
+
+                <!-- Button : UNSUBSCRIBE -->
+                <div *ngIf="isAlreadyAccepted">
+                  <a class="btn btn-danger text-white" (click)="onUnsubscribe()">
+                    <fa-icon icon="calendar-xmark" class="me-1"></fa-icon>
+                    Se désinscrire
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
-
-          <!-- Button : UNSUBSCRIBE -->
-          <div class="mt-3 text-center" *ngIf="isAlreadyAccepted">
-            <a class="btn btn-danger text-white" (click)="onUnsubscribe()">
-              <fa-icon icon="calendar-xmark" class="me-1"></fa-icon>
-              Se désinscrire
-            </a>
-          </div>
         </div>
+      </div>
+    </div>
 
-        <!-- Buttons display for invited -->
-        <div *ngIf="userLogin !== event.ownerLogin && isAlreadySub && !isAlreadyAccepted" class="d-flex justify-content-center mt-3">
-          <div class="card text-center">
+    <hr class="mb-0" />
+
+    <div class="row">
+      <app-events-players-list
+        [players]="players"
+        [isUserLoggedInOwner]="isUserLoggedInOwner"
+        (deletePlayerEvent)="onDeletePlayer($event)"
+        (invitePlayerEvent)="onInviteFriendsModal()"
+        class="col-12 col-lg-4"
+      >
+      </app-events-players-list>
+
+      <app-events-chats-list *ngIf="userLogin === event.ownerLogin || isAlreadyAccepted" [eventId]="eventId" class="col-12 col-lg-8">
+      </app-events-chats-list>
+
+      <!-- Buttons display for invited (replace chat) -->
+      <div *ngIf="userLogin !== event.ownerLogin && isAlreadySub && !isAlreadyAccepted" class="col-12 col-lg-8 mt-3 mb-2">
+        <div class="d-flex">
+          <div class="card mx-auto text-center">
             <div class="card-body">
               <h5 class="card-title">Invitation</h5>
               <hr />
@@ -92,21 +131,6 @@
           </div>
         </div>
       </div>
-
-      <div class="col-3">
-        <div class="card">
-          <img class="card-img-top" *ngIf="event.gameImgUrl as imgUrl" [src]="imgUrl" [alt]="event.gameTitle" />
-
-          <div class="card-body text-center">
-            <h2 class="card-title game-title mb-0">{{ event.gameTitle }}</h2>
-          </div>
-        </div>
-      </div>
     </div>
-
-    <app-events-players-list [players]="players" [isUserLoggedInOwner]="isUserLoggedInOwner" (deletePlayerEvent)="onDeletePlayer($event)">
-    </app-events-players-list>
-
-    <app-events-chats-list *ngIf="userLogin === event.ownerLogin || isAlreadyAccepted" [eventId]="eventId"> </app-events-chats-list>
   </ng-container>
 </div>
