🎨 Update my-friends
- Update empty lists display

--- a/src/main/webapp/app/gamer-squad/friends/components/friends-list-item/friends-list-item.component.html
+++ b/src/main/webapp/app/gamer-squad/friends/components/friends-list-item/friends-list-item.component.html
@@ -5,7 +5,7 @@
       <button
         *ngIf="friend.accepted"
         [routerLink]="['/friend-chats', friend.friendshipId]"
-        class="btn btn-primary text-white btn-sm col-auto me-1"
+        class="btn btn-primary text-white btn-sm col-auto mx-1"
         data-gs-tooltip="Messagerie"
       >
         <fa-icon class="text-white" icon="comments"></fa-icon>
