🌐 Remove nav language menu
- Disable NavBar language menu until i18l fully translated

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -251,7 +251,9 @@
             </li>
           </ul>
         </li>
-        <li ngbDropdown class="nav-item dropdown pointer" display="dynamic" *ngIf="languages && languages.length > 1">
+        <!-- Language disabled until fully support -->
+        <!-- <li ngbDropdown class="nav-item dropdown pointer" display="dynamic" *ngIf="languages && languages.length > 1"> -->
+        <li ngbDropdown class="nav-item dropdown pointer" display="dynamic" *ngIf="false">
           <a
             class="nav-link dropdown-toggle d-flex align-items-center"
             ngbDropdownToggle
