--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,56 @@
 <div class="footer">
-  <p jhiTranslate="footer">Ceci est votre pied de page</p>
+  <div class="container-fluid text-light bg-dark rounded px-5 py-3">
+    <div class="row justify-content-center">
+      <p class="col-12 text-center">
+        <strong>Gamer Squad :</strong>
+        Application de réseau social entre joueurs. Pour chercher de nouveaux partenaires de jeu et organiser des évènements.
+      </p>
+      <hr class="col-11 mt-0 border-top border-white opacity-25" />
+    </div>
+
+    <div class="row justify-content-center">
+      <p class="col-12 col-lg-7 text-light text-opacity-50">
+        <strong class="text-warning">IMPORTANT:</strong><br />
+        Ce projet fait partie du cursus de formation "Développeur J2EE" de OpenClassroom. Les informations qu'il comporte ne doivent pas
+        être utilisées dans le cadre d'une pratique réelle. Les informations présentées ici ne servent qu'à illustrer le projet pour le
+        rendre le plus proche possible de la réalité.
+      </p>
+
+      <hr class="col-11 d-lg-none mt-0 border-top border-white opacity-25" />
+
+      <div class="d-none d-lg-block col-lg-auto">
+        <div class="h-100 border-start border-white border-opacity-25"></div>
+      </div>
+
+      <div class="col-12 col-lg-4 text-light text-opacity-50 align-self-center">
+        <p>
+          <span class="fst-italic">Site web développé par :</span><br />
+          Richard ANDRIAN (Coyote) Copyright © 2024
+        </p>
+        <a
+          class="btn btn-primary footer-btn me-2"
+          role="button"
+          onKeyDown=""
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://github.com/Coyote-31"
+        >
+          <fa-icon [icon]="faGithub" class="me-1"></fa-icon>
+          GitHub
+          <!--          <fa-icon [icon]="['fab', '{{faAws}}']"></fa-icon>-->
+        </a>
+        <a
+          class="btn btn-primary footer-btn"
+          role="button"
+          onKeyDown=""
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://www.linkedin.com/in/richardandrian/"
+        >
+          <fa-icon [icon]="faLinkedin" class="me-1"></fa-icon>
+          LinkedIn
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
