--- a/src/main/webapp/content/scss/_bootstrap-variables.scss
+++ b/src/main/webapp/content/scss/_bootstrap-variables.scss
@@ -37,7 +37,7 @@ $border-radius-sm: 0.25rem;
 // Body:
 // Settings for the `<body>` element.
 
-$body-bg: #e4e5e6;
+$body-bg: #5b9cd4;
 
 // Typography:
 // Font, line-height, and color for body text, headings, and more.
