🎨 Update logo & favicon to Gamer Squad brand

--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -37,7 +37,6 @@
         >
           <fa-icon [icon]="faGithub" class="me-1"></fa-icon>
           GitHub
-          <!--          <fa-icon [icon]="['fab', '{{faAws}}']"></fa-icon>-->
         </a>
         <a
           class="btn btn-primary footer-btn"
@@ -50,6 +49,11 @@
           <fa-icon [icon]="faLinkedin" class="me-1"></fa-icon>
           LinkedIn
         </a>
+        <div class="mt-2 fst-italic">
+          <a target="_blank" href="https://icons8.com/icon/XHYhgcTEDl0f/square" class="link-primary">GS</a>
+          icône par
+          <a target="_blank" href="https://icons8.com" class="link-primary">Icons8</a>
+        </div>
       </div>
     </div>
   </div>
