--- a/src/main/webapp/content/css/loading.css
+++ b/src/main/webapp/content/css/loading.css
@@ -129,11 +129,11 @@
 }
 .app-loading .lds-pacman > div:nth-child(1) div {
   position: absolute;
-  top: 97px;
-  left: -8px;
-  width: 24px;
-  height: 10px;
-  background-image: url('../images/logo-jhipster.png');
+  top: 83px;
+  left: 0;
+  width: 32px;
+  height: 32px;
+  background-image: url('../images/logo/logo-gamer-squad.png');
   background-size: contain;
   -webkit-animation: lds-pacman-3 1s linear infinite;
   animation: lds-pacman-3 1.5s linear infinite;
